# rc4me

./: Dockerfile  Makefile  README.md  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
rc4me/: cli.py  cli_test.py  conftest.py  fetch_rcs.py  fetch_repo.py  prepare_repo.py  rc4me.py  rcdirs_test.py  rcmanager.py  rcmanager_test.py  run.py  util.py  util_test.py
