[metadata]
version = attr: rc4me.__version__
description = Run Commands 4 Me: Quickly and easily set up your run commands files
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wiggums-analytics/rc4me
project_urls =
    Bug Tracker = https://github.com/wiggums-analytics/rc4me/issues

[bdist_wheel]
universal=1
